# pydytuesday

./: README.md  pyproject.toml  pytytuesday.py  readme.rst  setup.py
PyDyTuesday/: PyDyTuesday.py  __init__.py  get_date.py  get_week.py
src/pydytuesday/: __init__.py  __main__.py
