[project]
name = "pydytuesday"
version = "0.1.0"
description = "A Python port of the TidyTuesday Downloader"
authors = [
  {name = "Andreas Varotsis", email = "andreas.varotsis@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7",
    "pandas>=2.2.3",
    "pytz>=2025.1",
    "requests>=2.32.3",
]

[project.scripts]
hello = "pydytuesday:hello"
last-tuesday = "pydytuesday:last_tuesday"
tt-available = "pydytuesday:tt_available"
tt-datasets = "pydytuesday:tt_datasets"
tt-load-gh = "pydytuesday:tt_load_gh"
tt-download-file = "pydytuesday:tt_download_file"
tt-download = "pydytuesday:tt_download"
tt-load = "pydytuesday:tt_load"
readme = "pydytuesday:readme"
rate-limit = "pydytuesday:rate_limit_check"
get-date = "pydytuesday:get_date"
get-week = "pydytuesday:get_week"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
